# DEFAKE-DETECTION-USING-MACHINE-LEARNING

./: Predict page  models.md  predict.md  valid_dataset.md
Django Application/: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
Model Creation/: Model_and_train_csv.ipynb
Model Creation/Helpers/: label_json_to_csv.py
Model Creation/labels/: Gobal_metadata.csv  createcsv.py  renamecsv.py
Sample_Videos/: .gitignore
