[project]
name = "defake-detection-using-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
# dependencies = [
#     "backcall>=0.1.0",
#     "setuptools>=40.8.0",
# ]

dependencies = [
    "altair",
    "astor",
    "base58",
    "blinker",
    "cmake",
    "django",
    "docutils",
    "enum-compat",
    "face-recognition",
    "future",
    "google",
    "google-api-python-client",
    "ipywidgets",
    "jupyterlab",
    "matplotlib",
    "opencv-python",
    "pycodestyle",
    "pydeck",
    "s3transfer",
    "torchvision",
    "tzlocal",
    "validators",
    "watchdog",
]
